# KreO

./: .dir-locals.el  .gitignore  .gitmodules  LICENSE  Makefile  README.md  arguments.example.json  cli.py  demangled_names.md  foo-results.json  foo.json  game.cpp  game.py  list_methods.py  parseconfig.py  postgame.py  pregame.py  pregame.sh  requirements.txt  run_all_postgame.bat  run_pipeline.bat  run_pipeline_evaluation.bat  run_pipeline_postgame.bat
analysis/: CMakeLists.txt  README.md  analyze_pdb_dump.cpp  evaluation.py  extract_gt_methods.py  foo.json  generate_dump.py
analysis/dumps/: .gitignore  remove_crlf.py  tinyxml2.dump
analysis/examples/: output.json  output_annoying.json  project1.dump  project1_annoying.dump  tinyxml.dump
analysis/include/: ctags_reader.h  json_loader.h  pdb_analyzer.h  pdb_organizer.h  pdb_output_analyzer.h  pdb_parser.h  pdb_results.h  pdb_results_generator.h  type_data.h  type_data_instances.h
analysis/results/: .gitignore  generate_result_tables.py  tinyxml-kreo.json  tinyxml-ooa.json  tinyxml.json
analysis/results/in/: TinyXML-kreo  TinyXML-ooa
analysis/results_json/: astyletest.json  cppcheck.json  tinyxml-kreo.json  tinyxml-ooa.json  tinyxml.json
analysis/scripts/: postanalysis.sh  preanalysis.sh
analysis/src/: analyze_pdb_dump.cpp  ctags_reader.cpp  edit_distance.cpp  evaluation.cpp  extract_gt_methods.cpp  pdb_analyzer.cpp  pdb_organizer.cpp  pdb_output_analyzer.cpp  pdb_parser.cpp  pdb_results.cpp  pdb_results_generator.cpp  type_data_instances.cpp  utils.cpp
data/: clean_pregame.bat  clean_pregame.sh  generate_data_for_new_test_project.py  kreo-catch2.json  kreo-libbmp.json  kreo-optparse.json  kreo-project.json.j2  kreo-ser4cpp.json  kreo-tinyxml2.json  kreo2-libbmp.json  lego+-catch2.json  lego+-libbmp.json  lego+-optparse.json  lego+-project.json.j2  lego+-ser4cpp.json  lego+-tinyxml2.json  lego-catch2.json  lego-libbmp.json  lego-optparse.json  lego-project.json.j2  lego-ser4cpp.json  lego-tinyxml2.json  metadata.json  run_all.bat  run_all_evaluation.bat  run_all_ooa_evaluation.bat  run_all_pregame.sh
evaluation/: .clang-format  CMakeLists.txt  README.md  count_classes_methods.py  evaluation.py  evaluation_data.py  extract_gt.py  extract_gt_methods.py  find_program_statistics.py  generate_dump.py  independent_evaluation.py  pdb_parser.py  utils.py
evaluation/include/: json_loader.h  pdb_analyzer.h  pdb_organizer.h  pdb_parser.h  pdb_results_generator.h  type_data.h  type_data_instances.h  utils.h
evaluation/results/: .gitignore  full-results.tex  generate_result_tables.py  instrumented-results.tex  kreo-instrumented-results.tex  summarized-results.tex
evaluation/results_json_ooa/: ooa-libbmp-results.json  ooa-optparse-results.json  ooa-ser4cpp-results-no-rtti.json  ooa-ser4cpp-results.json  ooa-tinyxml2-results-no-rtti.json  ooa-tinyxml2-results.json
evaluation/src/: analyze_pdb_dump.cpp  pdb_organizer.cpp  pdb_parser.cpp  pdb_results.cpp  pdb_results_generator.cpp  type_data_instances.cpp  utils.cpp
examples/: five.cpp  five.json  four.cpp  four.json  one.cpp  three.cpp  two.cpp
pintool/: Game.cpp  makefile  makefile.rules
postgame/: analysis_results.py  extract_false_negative_procedures.py  extract_false_positive_procedures.py  generate_json_single_class.py  method.py  method_store.py  object_trace.py  object_trace_evaluation.py  object_trace_validation.py  trie.py  (+4 more)
(+59 files in other folders)
